--- a/files/notebooks/Micro_Prediction_Models/microElectricMY2016.ipynb
+++ b/files/notebooks/Micro_Prediction_Models/microElectricMY2016.ipynb
@@ -47,7 +47,7 @@
    ],
    "source": [
     "#read history data used to train model\n",
-    "dataset = pd.read_csv('E:/SUMO/RUIXIAO/newChattanooganet/Data/output/BYD751_2021-01-06-0000_2021-01-16-0000.csv', index_col=False)\n",
+    "dataset = pd.read_csv('./Data/BYD751_2021-01-06-0000_2021-01-16-0000.csv', index_col=False)\n",
     "dataset.columns"
    ]
   },
@@ -267,7 +267,7 @@
    ],
    "source": [
     "#read trajectory data that needs prediction\n",
-    "trip = pd.read_csv(\"E:/SUMO/RUIXIAO/newChattanooganet/Data/output/Traj6-7/Route1_trip151720020_061000.csv\")\n",
+    "trip = pd.read_csv(\"./Route1_trip151720020_061000.csv\")\n",
     "trip1=trip[['speed','acceleration']]\n",
     "input4pre=pd.DataFrame()  \n",
     "input4pre['Acc']=trip1['acceleration']*(0.001)*3.28\n",
