--- a/files/notebooks/Micro_Prediction_Models/microHybridMY2014.ipynb
+++ b/files/notebooks/Micro_Prediction_Models/microHybridMY2014.ipynb
@@ -56,7 +56,7 @@
    ],
    "source": [
     "#read data\n",
-    "df = pd.read_csv('E:/SUMO/RUIXIAO/newChattanooganet/Data/output/gill503_2021-02-01-0000_2021-02-08-0000.csv', index_col=False)\n",
+    "df = pd.read_csv('./Data/gill503_2021-02-01-0000_2021-02-08-0000.csv', index_col=False)\n",
     "print(len(df))\n",
     "df.columns"
    ]
@@ -168,7 +168,7 @@
    "outputs": [],
    "source": [
     "#predict all trips in a for loop\n",
-    "path = r'E:/SUMO/RUIXIAO/newChattanooganet/Data/output/outtest'                    \n",
+    "path = r'path/'                    \n",
     "all_files = glob.glob(os.path.join(path, \"Trajectory*.csv\")) \n",
     "colnames=['time_ms','speed','acceleration','vehicle_ref','actorConfig_id','actorConfig_emissionClass','actorConfig_fuel','actorConfig_ref','actorConfig_vehicleClass']\n",
     "for f in all_files:\n",
@@ -181,7 +181,7 @@
     "    #prdiction and plot results\n",
     "    pre = model.predict(input2esti)\n",
     "    tripf=pd.concat([trip,pd.DataFrame(pre,columns=['FuelRateH'])], axis=1) \n",
-    "    with open('E:/SUMO/RUIXIAO/newChattanooganet/Data/output/outtest/hybrid/' + 'hybrid' + f[65:73] +'_'+ f[-12:-4] + '.csv', 'w', newline='') as oFile:\n",
+    "    with open('./Data/hybrid/' + 'hybrid' + f[65:73] +'_'+ f[-12:-4] + '.csv', 'w', newline='') as oFile:\n",
     "        tripf.to_csv(oFile, index = False)"
    ]
   },
@@ -193,7 +193,7 @@
    "outputs": [],
    "source": [
     "#read trajectory data that needs prediction\n",
-    "trip = pd.read_csv(\"E:/SUMO/RUIXIAO/newChattanooganet/Data/output/Traj6-7/Route10A_trip151970020_060600.csv\")\n",
+    "trip = pd.read_csv(\"./Route10A_trip151970020_060600.csv\")\n",
     "trip['speed']=trip['speed']*(0.01*3.6) \n",
     "#km/h\n",
     "trip['acceleration']=trip['acceleration']*(0.001) \n",
