--- a/_bibliography/refs.bib
+++ b/_bibliography/refs.bib
@@ -12,6 +12,27 @@
   keywords     = {transit, middleware},
 }
 
+@article{sandoval2021data,
+  author = {Sandoval, Ricardo and Van Geffen, Caleb and Wilbur, Michael and Hall, Brandon and Dubey, Abhishek and Barbour, William and Work, Daniel B.},
+  title = {Data driven methods for effective micromobility parking},
+  journal = {Transportation Research Interdisciplinary Perspectives},
+  year = {2021}
+}
+
+@article{SUN2021102637,
+title = {Hybrid electric buses fuel consumption prediction based on real-world driving data},
+journal = {Transportation Research Part D: Transport and Environment},
+volume = {91},
+pages = {102637},
+year = {2021},
+issn = {1361-9209},
+doi = {https://doi.org/10.1016/j.trd.2020.102637},
+url = {https://www.sciencedirect.com/science/article/pii/S1361920920308221},
+author = {Ruixiao Sun and Yuche Chen and Abhishek Dubey and Philip Pugliese},
+keywords = {Hybrid diesel transit bus, Artificial neural network, Fuel consumption prediction},
+abstract = {Estimating fuel consumption by hybrid diesel buses is challenging due to its diversified operations and driving cycles. In this study, long-term transit bus monitoring data were utilized to empirically compare fuel consumption of diesel and hybrid buses under various driving conditions. Artificial neural network (ANN) based high-fidelity microscopic (1 Hz) and mesoscopic (5–60 min) fuel consumption models were developed for hybrid buses. The microscopic model contained 1 Hz driving, grade, and environment variables. The mesoscopic model aggregated 1 Hz data into 5 to 60-minute traffic pattern factors and predicted average fuel consumption over its duration. The prediction results show mean absolute percentage errors of 1–2\% for microscopic models and 5–8\% for mesoscopic models. The data were partitioned by different driving speeds, vehicle engine demand, and road grade to investigate their impacts on prediction performance.}
+}
+
  @inproceedings{wilbur2020decentralized,
   title={Time-dependent Decentralized Routing using Federated Learning},
   author={Wilbur, Michael and Samal, Chinmaya and Talusan, Jose Paolo and Yasumoto, Keiichi and Dubey, Abhishek},
