--- a/_bibliography/refs.bib
+++ b/_bibliography/refs.bib
@@ -4,7 +4,7 @@
 
 @InProceedings{ecml2021,
 author="Michael Wilbur  and Ayan Mukhopadhyay and Sayyed Vazirizade and Philip Pugliese and Aron Laszka and Abhishek Dubey",
-title="A Context-Aware Approach to Detect Abnormal Human Behaviors",
+title="Energy and Emission Prediction for Mixed-Vehicle Transit Fleets Using Multi-Task and Inductive Transfer Learning",
 booktitle="Joint European Conference on Machine Learning and Knowledge Discovery in Databases",
 year="2021",
 abstract="Public transit agencies are focused on making their fixed-line bus systems more energy efficient by introducing electric (EV) and hybrid (HV) vehicles to their 
